:tada: Fix css custom presets dropdown

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -510,7 +510,15 @@
 
 .presets {
   .custom-select-dropdown {
-    width: 200px;
+    width: 237px;
+
+    li {
+      font-size: $fs12;
+
+      span {
+        font-size: $fs11;
+      }
+    }
   }
 }
 
